syntax = "proto3";

package contract.dto;

import "google/protobuf/wrappers.proto";

message AiSettings {
  string ai_settings_id = 1;       // UUID als String speichern
  string language_model_path = 2;
  string prompt = 3;
}
